Enable support for Java 9 modules